<resources>
    <!-- Nom de l'application -->
    <string name="app_name">Instagram</string>

    <!-- Valeur des caratère des touches spéciale -->
    <string name="str_clear">C</string>
    <string name="str_plusminus">±</string>
    <string name="str_percent">%</string>
    <string name="str_equal">=</string>

    <!-- Valeur des caratère des touches à opérations -->
    <string name="str_divide">÷</string>
    <string name="str_multiply">x</string>
    <string name="str_add">+</string>

    <!-- Valeur des caratère des touches numériques -->
    <string name="str_zero">0</string>
    <string name="str_two">2</string>
    <string name="str_three">3</string>
    <string name="str_four">4</string>
    <string name="str_five">5</string>
    <string name="str_six">6</string>
    <string name="str_seven">7</string>
    <string name="str_eight">8</string>
    <string name="str_nine">9</string>
    <string name="str_point">.</string>
</resources>
