<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/computationactivity_wrapper"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg"
    >


    <!--- Calculation Area -->
    <LinearLayout
        android:id="@+id/calcularea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- Computer number -->
        <TextView
            android:id="@+id/computenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="textEnd"
            tools:text=" 3 + 3 * 2"
            android:text="3 + 3 * 2"
            android:textColor="#B3FFFFFF"
            style="@style/ComputeText" />

        <!-- Result number -->
        <TextView
            android:id="@+id/resultnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textSize="60sp"
            tools:text="9"
            android:text="9"
            style="@style/ComputeText"/>
    </LinearLayout>

    <!-- Touch/Button Area -->
    <GridLayout
        android:id="@+id/toucharea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="5"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:visibility="visible">
        <Button
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:text="C"
            style="@style/ButtonDefault"/>
        <Button
            android:id="@+id/btn_plusminus"
            tools:text="±"
            android:text="@string/str_plusminus"
            style="@style/ButtonDefault"/>
        <Button
            android:id="@+id/btn_percent"
            android:text="@string/str_percent"
            style="@style/ButtonDefault"/>
        <Button
            android:id="@+id/btn_divide"
            android:text="@string/str_divide"
            style="@style/ButtonOperationDefault"/>
        <Button
            android:id="@+id/btn_seven"
            android:layout_width="0dp"
            android:text="@string/str_seven"
            style="@style/ButtonDefault"/>
        <Button
            android:id="@+id/btn_eight"
            android:layout_width="0dp"
            android:text="@string/str_eight"
            style="@style/ButtonDefault"/>
        <Button
            android:id="@+id/btn_nine"
            android:text="@string/str_nine"
            style="@style/ButtonDefault"/>
        <Button
            android:id="@+id/btn_multiply"
            android:text="@string/str_multiply"
            style="@style/ButtonOperationDefault"
            />
        <Button
            android:id="@+id/btn_four"
            android:text="@string/str_four"
            style="@style/ButtonDefault"/>
        <Button
            android:id="@+id/btn_five"
            android:text="@string/str_five"
            style="@style/ButtonDefault" />
        <Button
            android:id="@+id/btn_six"
            android:text="@string/str_six"
            style="@style/ButtonDefault"
            />
        <Button
            android:id="@+id/btn_subtract"
            android:text="-"
            style="@style/ButtonOperationDefault"/>
        <Button
            android:id="@+id/btn_one"
            android:text="1"
            style="@style/ButtonDefault"/>
        <Button
            android:id="@+id/btn_two"
            android:layout_width="0dp"
            android:text="@string/str_2"
            style="@style/ButtonDefault"/>
        <Button
            android:id="@+id/btn_three"
            android:text="@string/str_3"
            style="@style/ButtonDefault"/>
        <Button
            android:id="@+id/btn_add"
            android:text="@string/str_add"
            style="@style/ButtonOperationDefault"/>
        <Button
            android:id="@+id/btn_zero"
            android:text="@string/str_zero"
            style="@style/ButtonDefault"/>
        <Button
            android:id="@+id/btn_point"
            android:text="@string/str_point"
            style="@style/ButtonDefault"/>
        <Button
            android:id="@+id/btn_equal"
            android:text="@string/str_equal"
            tools:text="="
            android:layout_rowWeight="2"
            android:layout_gravity="fill"
            android:gravity="center"
            android:layout_columnSpan="2"
            style="@style/ButtonEqualDefault"/>
    </GridLayout>

</LinearLayout>